--- a/pages/problemasuspeitos.html
+++ b/pages/problemasuspeitos.html
@@ -66,14 +66,14 @@
             background: transparent;
             color: white;
             border: none;
-            border-bottom: 2px solid rgb(6, 108, 243);
+            border-bottom: 2px solid #167e56;
         }
 
         .text-line1 {
             background: transparent;
             color: white;
             border: none;
-            border-bottom: 2px solid rgb(6, 108, 243);
+            border-bottom: 2px solid #167e56;
             width: 90%;
         }
 
@@ -110,6 +110,17 @@
             }
 
         }
+
+        .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
     </style>
 </head>
 
