--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -80,7 +80,7 @@
             background: transparent;
             color: white;
             border: none;
-            border-bottom: 2px solid rgb(6, 108, 243);
+            border-bottom: 2px solid #167e56;
         }
 
         #pulso {
@@ -226,6 +226,17 @@
                 margin-bottom: 15px;
             }
         }
+
+        .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
     </style>
 </head>
 
