--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -138,6 +138,17 @@
       margin-top: 15%;
     }
   }
+
+  .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
 </style>
 
 <body>
