--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -86,6 +86,17 @@
       align-items: center;
       width: 90%;
     }
+
+    .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
   </style>
 </head>
 
