--- a/pages/materiaisutilizados.html
+++ b/pages/materiaisutilizados.html
@@ -129,6 +129,23 @@
             align-items: center;
             width: 90%;
         }
+
+        .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
+
+    #botao{
+    color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
     </style>
 </head>
 
