--- a/pages/procedimentos.html
+++ b/pages/procedimentos.html
@@ -79,7 +79,7 @@
       background: transparent;
       color: white;
       border: none;
-      border-bottom: 2px solid rgb(6, 108, 243);
+      border-bottom: 2px solid #167e56;
     }
 
 
@@ -162,8 +162,19 @@
       background: transparent;
       color: white;
       border: none;
-      border-bottom: 2px solid rgb(6, 108, 243);
+      border-bottom: 2px solid #167e56;
       width: 100%;
+    }
+
+    .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
     }
   </style>
 </head>
