--- a/pages/situation.html
+++ b/pages/situation.html
@@ -133,6 +133,17 @@
         justify-content: space-between;
         width: 90%;
     }
+
+    .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+    }
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
 </style>
 
 <body>
