--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -78,21 +78,18 @@
         margin-top: 6%;
         gap: 100px;
     }
-    .welcome_botoes button {
-        width: 38vw;
-        height: 8vh;
-        color: #007aff;
-        font-family: 'Inter', sans-serif;
-        font-size: 15px;
-        background-color: transparent;
-        border-radius: 10px;
-        border-color: #007aff;
-        border-width: 3px;
+
+    .btn-outline-primary {
+      color: #167e56;
+      border-color: #167e56;
+      width: 300px;
     }
-    .botao_welcome:hover{
-        background-color: #007aff;
-        color: white;
-    } 
+
+    .btn:hover {
+      color: white;
+      border-color: #167e56;
+      background-color: #167e56;
+    }
 </style>
 
 <body>
@@ -117,7 +114,7 @@
         <!-- Botão login -->
         <div class="welcome_botoes">
             <div>
-                <button class="botao_welcome" type="button" onclick="window.location.href = 'login.html'">Log in</button>
+                <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.location.href = 'login.html'">Log in</button>
             </div>
         </div>
     </div>
