--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -264,7 +264,7 @@
       </div>
     </nav>
 
-    <form action="">
+    <form action="conducao.php" method="post">
 
       <div class="container-fluid">
 
@@ -276,21 +276,21 @@
               <div class="d-flex">
                 <label class="card-text me-3">SENTADA</label>
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" value="" id="flexCheckDefault" name="um">
+                  <input class="form-check-input" type="radio" value="Sentada" id="flexCheckDefault" name="formaConducao">
                 </div>
               </div>
 
               <div class="d-flex">
                 <label class="card-text me-3">SEMI-SENTADA</label>
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" value="" id="flexCheckDefault" name="um">
+                  <input class="form-check-input" type="radio" value="Semi-sentada" id="flexCheckDefault" name="formaConducao">
                 </div>
               </div>
 
               <div class="d-flex">
                 <label class="card-text me-3">DEITADA</label>
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" value="" id="flexCheckDefault" name="um">
+                  <input class="form-check-input" type="radio" value="Deitada" id="flexCheckDefault" name="formaConducao">
                 </div>
               </div>
             </div>
@@ -307,7 +307,7 @@
                     <div class="gray-box">
                       <div class="d-flex align-items-center">
                         <label class="fonte" style="margin-left: 20px;">
-                          <input class="form-check-input" type="radio" name="escolher">
+                          <input class="form-check-input" type="radio" value="Crítico" name="decisaoTransporte">
                           CRÍTICO
                         </label>
                       </div>
@@ -320,7 +320,7 @@
                     <div class="gray-box">
                       <div class="d-flex align-items-center">
                         <label class="fonte" style="margin-left: 20px;">
-                          <input class="form-check-input" type="radio" name="escolher">
+                          <input class="form-check-input" type="radio" value="Instável" name="decisaoTransporte">
                           INSTAVEL
                         </label>
                       </div>
@@ -335,7 +335,7 @@
                     <div class="gray-box">
                       <div class="d-flex align-items-center">
                         <label class="fonte" style="margin-left: 20px;">
-                          <input class="form-check-input" type="radio" name="escolher">
+                          <input class="form-check-input" type="radio" value="Estável" name="decisaoTransporte">
                           ESTÁVEL
                         </label>
                       </div>
@@ -348,7 +348,7 @@
                     <div class="gray-box">
                       <div class="d-flex align-items-center">
                         <label class="fonte" style="margin-left: 20px;">
-                          <input class="form-check-input" type="radio" name="escolher">
+                          <input class="form-check-input" type="radio" value="Potencialmente estável" name="decisaoTransporte">
                           POTENCIALMENTE ESTAVEL
                         </label>
                       </div>
@@ -362,17 +362,14 @@
         </div>
       </div>
   </div>
-  </form>
   <div class="espaço_botao">
     <div class="botao">
       <button type="button" class="btn btn-outline-primary btn-lg"
         onclick="window.location.href = 'vitimaera.html'">Voltar</button>
-      <button type="button" class="btn btn-outline-primary btn-lg"
-        onclick="window.location.href = 'equipedeatendimento.html'">Próximo</button>
+      <button type="submit" class="btn btn-outline-primary btn-lg">Próximo</button>
     </div>
   </div>
-
-
+  </form>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
