--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -278,74 +278,73 @@
       </div>
     </div>
   </nav>
-  <form action="">
+  <form action="vitimaera.php" method="post">
     <div class="form-group h-75">
       <div class="container h-100 mt-5 justify-content-center align-items-center">
         <div class="row gap-4" id="row">
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">CICLISTA </span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="Ciclista" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">CONDUTOR CARRO</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="Condutor carro" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">CONDUTOR MOTO</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">CLINICO</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">GESTANTE</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">TRAUMA</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">PASS.BAN.FRENTE</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">PAS.BCO.TRÁS</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">PAS.MOTO</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
           <div class="col-4 d-flex p-4 justify-content-between">
             <span class="d-flex">PEDESTRE</span>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="vitimaEra">
             </div>
           </div>
         </div>
       </div>
     </div>
-  </form>
   </div>
   <br>
   <br>
@@ -354,11 +353,11 @@
     <div class="botao">
       <button type="button" class="btn btn-outline-primary btn-lg "
         onclick="window.location.href = 'situation.html'">Voltar</button>
-      <button type="button" class="btn btn-outline-primary btn-lg"
-        onclick="window.location.href = 'conducao.html'">Proximo</button>
+      <button type="submit" class="btn btn-outline-primary btn-lg" >Proximo</button>
     </div>
   </div>
   </div>
+  </form>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
